November 17, 2014
Version 0.4.5

IgCore:
+ Features added for Change-O compatibility.
+ Added custom help formatter.
+ Modifications to internals of multiprocessing code.

AssemblePairs:
+ Added more verbose logging.
+ Change PVAL log field to PVALUE.
+ Changed precision of ERROR and PVALUE log fields.
+ Added support for cases where one mate pair is the subsequence of the other.
+ Added --scanrev flag to allow for head sequence to overhand end of tail.
+ Removed truncated (quick) error calculation in align subcommand..
+ Changed internal selection of top scoring alignment to use Z-score
  approximation rather than a combination of error rate and binomial
  mid-p value.
+ Added '-q (minimum quality score)' parameter to allow exclusion of low quality
  bases from scoring in align subcommand.
+ Added reference subcommand which uses V-region germline alignments from
  ublast to assemble paired-ends.
+ Internal changes to multiprocessing structure.

-------------------------------------------------------------------------------
June 10, 2014
Version 0.4.4

SplitSeq:
+ Removed a *nix-specific dependency, allowing SplitSeq to work on Windows.

-------------------------------------------------------------------------------
April 7, 2014
Version 0.4.3

CollapseSeq:
+ Fixed bug that occurs with Python 2.7.5 on OS X.

SplitSeq:
+ Fixed bug in samplepairs subcommand that occurs with Python 2.7.5 on OS X.

-------------------------------------------------------------------------------
March 20, 2014
Version 0.4.2

Increased verbosity of exception reporting.

IgCore:
+ Updates to consensus functions to support changes to BuildConsensus.

AssemblePairs:
+ Set default alpha to 0.01.

BuildConsensus:
+ Added support for '--freq (value)' parameter to quality consensus method
  and set default value to 0.6.
+ Fixed a bug in the frequency consensus method where missing values were
  contributing to the total character count at each position.